# x4-mods

./: .gitignore  .gitmodules  BUILD_SCRIPTS_README.md  CMakeLists.txt  README.md  build_mods.ps1  build_nakama.ps1  build_nakama_sdk.bat  build_nakama_sdk.ps1  build_nakama_sdk.sh  debug-x4.bat  unpack-x4.ps1
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Mods/: CMakeLists.txt  CMakeUtils.cmake
Mods/HenMod.Commons/: CMakeLists.txt
Mods/HenMod.Commons/cpp/src/private/: log_to_x4.cpp
Mods/HenMod.Commons/cpp/src/public/: x4_script_base.h
Mods/HenMod.Commons/includes/lua/: lua_includes.h
Mods/HenMod.Commons/scripts/: generate_lua_wrappers.py
Mods/HenMod.Commons/tests/: test_commons.cpp
Mods/NakamaX4Client/: CMakeLists.txt  README.md  content.xml  nakama_bridge.py  ui.xml
Mods/NakamaX4Client/cpp/: CMakeLists.txt
Mods/NakamaX4Client/cpp/include/: LogToX4.h  nakama_http_api.h  nakama_x4_api.h
Mods/NakamaX4Client/cpp/scripts/: generate_lua_wrappers.py  generate_lua_wrappers.py.backup
Mods/NakamaX4Client/cpp/src/: LogToX4.cpp  debug_nakama.cpp  nakama_x4_dll.cpp
Mods/NakamaX4Client/cpp/src/private/: log_to_x4.cpp  lua_bindings.cpp  nakama_realtime_client.cpp  nakama_x4_client.cpp  player_ship.cpp  sector_match.cpp
Mods/NakamaX4Client/cpp/src/public/: log_to_x4.h  lua_bindings.h  nakama_realtime_client.h  nakama_x4_client.h  player_ship.h  sector_match.h  test_script.h  x4_script_base.h
Mods/NakamaX4Client/cpp/tests/: nakama_sdk.tests.cpp  nakama_x4_client.tests.cpp  test_basic.cpp
Mods/NakamaX4Client/md/: nakama_integration.xml
Mods/NakamaX4Client/server/: .cookie  Dockerfile  build-and-run.ps1  docker-compose.yaml  go.mod  local.yml  main.go  main.lua  sector_match_handler.go  test.js
Mods/NakamaX4Client/server/modules/: debug_rpc.lua  main.lua  sector_match_handler.lua  sector_rpc.lua
Mods/NakamaX4Client/test/: test_lua_integration.lua  test_nakama_dll.cpp  test_nakama_integration.lua  test_x4_lua_compatibility.lua
Mods/NakamaX4Client/ui/nakama/: .env.example  debugger.lua  log_lib.lua  nakama_client.lua  nakama_lib.lua  sector_manager.lua  test_nakama_load.lua  test_x4_integration.lua
universe-gen/: universe-test-minimal.json  universe-test.json
universe-gen/output/debuguniverse/: content.xml
universe-gen/output/debuguniverse/assets/environments/cluster/: empty_space.xml
universe-gen/output/debuguniverse/index/: components.xml  macros.xml
universe-gen/output/debuguniverse/libraries/: gamestarts.xml  god.xml  jobs.xml  mapdefaults.xml
universe-gen/output/debuguniverse/maps/debuguniverse/: clusters.xml  galaxy.xml  sectors.xml  zones.xml
universe-gen/output/debuguniverse/md/: Drain_Stations.xml  FactionLogic.xml  PlacedObjects.xml  playerreputation.xml  x4ep1_war_subscriptions.xml
